[tool.poetry]
name = "proboundsviz"
version = "0.1.0"
description = "Visualizations of probounds.py outputs"
authors = ["Uriah Finkel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
probounds = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
myst-nb = {version = "^1.1.2", python = "^3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
