[tool.poetry]
name = "proboundsviz"
version = "0.1.0"
description = "Visualizations of probounds.py outputs"
authors = ["Uriah Finkel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
probounds = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
myst-nb = {version = "^1.1.2", python = "^3.9"}


[tool.pdm.dev-dependencies]
dev = [
    "jupyter<2.0.0,>=1.1.1",
    "sphinx-autoapi<4.0.0,>=3.4.0",
    "sphinx-rtd-theme<4.0.0,>=3.0.2",
    "myst-nb<2.0.0,>=1.1.2; python_version ~= \"3.9\"",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Uriah Finkel"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "probounds<1.0.0,>=0.3.1",
    "quartodoc>=0.9.1",
    "reactable>=0.1.5",
]
name = "proboundsviz"
version = "0.1.0"
description = "Visualizations of probounds.py outputs"
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter<2.0.0,>=1.1.1",
    "sphinx-autoapi<4.0.0,>=3.4.0",
    "sphinx-rtd-theme<4.0.0,>=3.0.2",
    "myst-nb<2.0.0,>=1.1.2; python_version ~= \"3.9\"",
    "ipykernel>=6.29.5",
    "ruff>=0.11.0",
]
